--- a/index.html
+++ b/index.html
@@ -14,155 +14,177 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- CSS específico -->
     <link rel="stylesheet" href="/css/index.css">
+
 </head>
 
 <body>
-    <!-- HEADER -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="/img/logo-psico.png" alt="Logo Psicologia" style="height: 50px;">
-                </a>
-                <h2 class="text-white fw-bold ms-3 mb-0">Webinar de Psicologia</h2>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <!-- Navbar Bootstrap -->
+    <nav class="navbar navbar-expand-md home-color sticky-top">
+        <div class="container-fluid">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#home">
+                <img src="/img/esbam-logo.png" class="rounded" alt="esbam" style="height: 50px;">
+            </a>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#convidados">Convidados</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#envolvidos">Alunos</a></li>
-                        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#inscricao">Inscrição</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+            <!-- Botão hamburguer (abre/fecha menu) -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <!-- HERO -->
-    <section class="hero d-flex justify-content-center align-items-center my-4">
-        <div class="text-center">
-            <img src="/img/main-evento.jpeg" alt="Evento de Psicologia"
-                class="img-fluid shadow-lg rounded mx-auto d-block">
-        </div>
-    </section>
-
-    <!-- CONVIDADOS -->
-    <section id="convidados" class="container text-center my-5">
-        <h2 class="fw-bold text-primary">Nossos Convidados</h2>
-        <p class="text-muted">Profissionais renomados compartilhando evidências científicas, estudos de caso e práticas
-            psicológicas aplicadas.</p>
-
-        <div class="d-flex justify-content-center flex-wrap gap-3 mt-4">
-            <div class="card card-large shadow-lg border-primary border-3">
-                <i class="bi bi-person-circle display-3 text-primary mt-3"></i>
-                <div class="card-body">
-                    <p class="card-text">Especialista em Psicologia Cognitivo-Comportamental, com foco em aprendizagem e
-                        saúde mental.</p>
-                </div>
-            </div>
-            <div class="card card-small shadow-sm">
-                <i class="bi bi-person-circle display-5 text-secondary mt-3"></i>
-                <div class="card-body">
-                    <p class="card-text">Pesquisador em Neuropsicologia, abordando mecanismos neurais e funções
-                        executivas.</p>
-                </div>
-            </div>
-            <div class="card card-small shadow-sm">
-                <i class="bi bi-person-circle display-5 text-success mt-3"></i>
-                <div class="card-body">
-                    <p class="card-text">Psicanalista convidado, trazendo reflexões críticas sobre inconsciente e
-                        subjetividade.</p>
-                </div>
+            <!-- Links do menu -->
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#sobre">Evento</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#convidados">Convidados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#participe">Participe</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </section>
+    </nav>
 
-    <!-- ALUNOS -->
-    <section id="envolvidos" class="container text-center my-5">
-        <h2 class="fw-bold text-success">Alunos Envolvidos</h2>
-        <p class="text-muted">Estudantes responsáveis por apresentações, com pesquisas fundamentadas em metodologias
-            científicas.</p>
 
-        <div class="d-flex justify-content-center flex-wrap gap-3 mt-4">
-            <div class="card card-large shadow-lg border-success border-3">
-                <i class="bi bi-person-circle display-3 text-success mt-3"></i>
-                <div class="card-body">
-                    <p class="card-text">Aluno 2 — Pesquisa sobre impacto da psicologia organizacional no ambiente de
-                        trabalho.</p>
-                </div>
+    <!-- Seção 1: Apresentação -->
+    <div class="p-5 home-color" id="home">
+        <div class="row align-items-center">
+            <div class="col-md-6 mb-4">
+                <h1 class="fw-bold">WEBINAR: QUEBRANDO TABUS NA ERA DIGITAL</h1>
+                <h3>Diálogo sobre Gênero, Sexualidade, Saúde Mental e os Impactos das Redes Sociais</h3>
             </div>
-            <div class="card card-small shadow-sm">
-                <i class="bi bi-person-circle display-5 text-warning mt-3"></i>
-                <div class="card-body">
-                    <p class="card-text">Aluno 1 — Estudo sobre intervenções em saúde mental na adolescência.</p>
-                </div>
-            </div>
-            <div class="card card-small shadow-sm">
-                <i class="bi bi-person-circle display-5 text-info mt-3"></i>
-                <div class="card-body">
-                    <p class="card-text">Aluno 3 — Análise de práticas de psicologia escolar em instituições públicas.
-                    </p>
-                </div>
+            <div class="col-md-6 text-center mb-4">
+                <img src="/img/pride-img-home.png" alt="orgulho lgbt" class="img-fluid">
             </div>
         </div>
-    </section>
+        <div class="text-center d-flex justify-content-start">
+            <p class="event-date">DIA: 25/10/2025 • VIA MEET</p>
+        </div>
+    </div>
 
-    <!-- FORMULÁRIO -->
-    <section class="container my-5">
-        <h2 class="text-center fw-bold mb-4">Vai valer horas complementares!</h2>
-        <form class="mx-auto" style="max-width:500px;">
-            <div class="mb-3">
-                <label for="nome" class="form-label">Nome completo</label>
-                <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
+    <!-- Seção 2: Sobre o evento -->
+    <div class="p-5 sobre-color" id="sobre">
+        <div class="row">
+            <div class="col-md-5 mb-4">
+                <h1 class="fw-bold">SOBRE A WEBNAR:</h1>
+                <h3>25/10/2025 • VIA METT</h3>
+                <h4>Um espaço de reflexão e troca sobre temas atuais e necessários:</h4>
             </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Enviar</button>
-        </form>
-    </section>
-
-    <!-- FOOTER -->
-    <footer id="inscricao" class="bg-primary text-white py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <!-- WhatsApp Group -->
-                <div class="col-md-6 text-md-start text-center mb-4 mb-md-0">
-                    <h2 class="fw-bold">Entre no nosso grupo para atualizações</h2>
-                    <p class="text-light">Receba informações técnicas, artigos complementares e lembretes do evento
-                        diretamente no WhatsApp.</p>
-                    <a href="#" target="_blank" class="btn btn-success btn-lg rounded-pill shadow-sm">
-                        <i class="bi bi-whatsapp"></i> Entrar no Grupo
-                    </a>
-                </div>
-
-                <!-- Logo Instituição -->
-                <div class="col-md-6 text-md-end text-center">
-                    <h2 class="fw-bold mb-3">Oferecimento</h2>
-                    <img src="/img/esbam-logo.png" alt="logo-esbam" style="max-height: 100px;">
-                    <p class="small mt-2">Rua Exemplo, 123 - Manaus/AM</p>
-                </div>
-            </div>
-
-            <hr class="border-light opacity-25 my-4">
-
-            <div class="text-center">
-                <p class="mb-0">&copy; 2025 Webinar Psicologia | Desenvolvido para fins acadêmicos</p>
+            <div class="col-md-7">
+                <ul class="list-unstyled">
+                    <li class="mb-4">
+                        <h3>Saúde mental e os impactos do preconceito e da discriminação no mundo conectado</h3>
+                        <p>Como o preconceito e a discriminação afeta a saúde mental de jovens LGBTQIA+ no mundo digital
+                            ?</p>
+                    </li>
+                    <hr class="bg-light">
+                    <li class="mb-4">
+                        <h3>Oportunidades e riscos da tecnologia na construção de identidades e apoio emocional</h3>
+                        <p>Como gerar estratégias de acolhimento e construir de redes de apoio na era digital</p>
+                    </li>
+                    <hr class="bg-light">
+                    <li>
+                        <h3>Inclusão, respeito à diversidade e combate ao ódio online, promovendo empatia e redes de
+                            acolhimento</h3>
+                        <p>Reflexões sobre os desafios e possibilidades de construir um ambiente digital mais humano e
+                            seguro para todos</p>
+                    </li>
+                </ul>
             </div>
         </div>
-    </footer>
 
+        <!-- Call to action -->
+        <div class="text-center d-flex flex-column flex-md-row align-items-center justify-content-between gap-5">
+            <img src="/img/pride-sobre.png" alt="comemorando o orgulho" class="img-fluid" style="max-width:250px;">
+            <button><a href="">INSCREVA-SE AQUI!</a></button>
+            <img src="/img/lesbicas-sobre.png" alt="casal e criança" class="img-fluid" style="max-width:250px;">
+        </div>
+    </div>
 
+    <!-- Seção 3: Participantes -->
+    <div class="p-5 parti-entre-color" id="convidados">
+        <h1 class="text-center mb-4">Participantes</h1>
+        <div class="row text-center g-4">
 
-    <!-- Scripts -->
+            <div class="col-6 col-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+                    </div>
+                    <div class="col-auto">
+                        <span class="d-block mt-2 border rounded px-3 py-1 bg-primary">Nome do entrevistador</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+                    </div>
+                    <div class="col-auto">
+                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+                    </div>
+                    <div class="col-auto">
+                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+                    </div>
+                    <div class="col-auto">
+                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+                    </div>
+                    <div class="col-auto">
+                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+                    </div>
+                    <div class="col-auto">
+                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/index.js"></script>
+
 </body>
 
 </html>
