correção de posição do inscreva-se

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="/img/pride-img-home.png" alt="orgulho lgbt" class="img-fluid">
             </div>
         </div>
-        <div class="text-center d-flex justify-content-start">
+        <div class="text-center d-flex justify-content-center justify-content-lg-start">
             <p class="event-date">DIA: 25/10/2025 • VIA MEET</p>
         </div>
     </div>
