--- a/index.html
+++ b/index.html
@@ -53,20 +53,19 @@
         </div>
     </nav>
 
-
     <!-- Seção 1: Apresentação -->
     <div class="p-5 home-color" id="home">
         <div class="row align-items-center">
             <div class="col-md-6 mb-4">
                 <h1 class="fw-bold">WEBINAR: QUEBRANDO TABUS NA ERA DIGITAL</h1>
-                <h3>Diálogo sobre Gênero, Sexualidade, Saúde Mental e os Impactos das Redes Sociais</h3>
+                <h3>Diálogos sobre Gênero, Sexualidade, Saúde Mental e os Impactos das Redes Sociais</h3>
             </div>
             <div class="col-md-6 text-center mb-4">
                 <img src="/img/pride-img-home.png" alt="orgulho lgbt" class="img-fluid">
             </div>
         </div>
         <div class="text-center d-flex justify-content-center justify-content-lg-start">
-            <p class="event-date">DIA: 25/10/2025 • VIA MEET</p>
+            <p class="event-date">DIA: 25/10/2025 • 14:00 às 17:00 • VIA MEET</p>
         </div>
     </div>
 
@@ -82,20 +81,20 @@
                 <ul class="list-unstyled">
                     <li class="mb-4">
                         <h3>Saúde mental e os impactos do preconceito e da discriminação no mundo conectado</h3>
-                        <p>Como o preconceito e a discriminação afeta a saúde mental de jovens LGBTQIA+ no mundo digital
-                            ?</p>
+                        <p>Como o preconceito e a discriminação afetam a saúde mental de jovens LGBTQIA+ no mundo
+                            digital?</p>
                     </li>
                     <hr class="bg-light">
                     <li class="mb-4">
                         <h3>Oportunidades e riscos da tecnologia na construção de identidades e apoio emocional</h3>
-                        <p>Como gerar estratégias de acolhimento e construir de redes de apoio na era digital</p>
+                        <p>Como gerar estratégias de acolhimento e construir redes de apoio na era digital ?</p>
                     </li>
                     <hr class="bg-light">
                     <li>
                         <h3>Inclusão, respeito à diversidade e combate ao ódio online, promovendo empatia e redes de
                             acolhimento</h3>
-                        <p>Reflexões sobre os desafios e possibilidades de construir um ambiente digital mais humano e
-                            seguro para todos</p>
+                        <p>Reflexões sobre os desafios e as possibilidades de construir um ambiente digital mais humano
+                            e seguro para todos.</p>
                     </li>
                 </ul>
             </div>
@@ -110,78 +109,93 @@
     </div>
 
     <!-- Seção 3: Participantes -->
-    <div class="p-5 parti-entre-color" id="convidados">
+    <div class="p-5 parti-color" id="convidados">
         <h1 class="text-center mb-4">Participantes</h1>
-        <div class="row text-center g-4">
 
-            <div class="col-6 col-md-4">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
+        <div class="container">
+            <div class="row g-4 justify-content-center text-center">
+                <!-- Primeira linha - 3 cards -->
+                <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 border rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                        <img src="/img/Anna-Thais-psi-img.png" alt="entrevistador" class="speaker-img mb-3 img-fluid">
+                        <h4 class="mb-2">Anna Thaís</h4>
+                        <p class="small">
+                            Especializada em atendimentos clínicos para o público LGBTQIAPN+ e neurodivergentes adultos.
+                        </p>
                     </div>
-                    <div class="col-auto">
-                        <span class="d-block mt-2 border rounded px-3 py-1 bg-primary">Nome do entrevistador</span>
+                </div>
+
+                <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 border rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                        <img src="/img/Aline-Oliveira-psi-img.png" alt="entrevistador"
+                            class="speaker-img mb-3 img-fluid">
+                        <h4 class="mb-2">Aline Oliveira</h4>
+                        <p class="small">
+                            Psicóloga, Daseinsanalista e doutoranda em Psicologia (UFF), com mestrado pela UFAM e
+                            formação em clínica fenomenológico-existencial.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 border rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                        <img src="/img/Akashi-Hashimoto-psi-img.png" alt="entrevistador"
+                            class="speaker-img mb-3 img-fluid">
+                        <h4 class="mb-2">Akashi Hashimoto</h4>
+                        <p class="small">
+                            Psicólogo clínico e pesquisador (CRP: 20/13.588), com atuação em temas LGBTQIAPN+.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Segunda linha - 2 cards centralizados -->
+                <div class="w-100"></div> <!-- força quebra de linha -->
+
+                <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 border rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                        <img src="/img/Clarissa-Oliveira-estjor-img.jpg" alt="entrevistador"
+                            class="speaker-img mb-3 img-fluid">
+                        <h4 class="mb-2">Clarissa Oliveira</h4>
+                        <p class="small">
+                            Estudante de Jornalismo e Vice-Presidente da Associação LGBTQIA+ DUDA do Amazonas e
+                            Vice-Presidente Municipal do MDB Diversidade Manaus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 border rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                        <img src="/img/Thamara-Pereira-adv-img.jpg" alt="entrevistador"
+                            class="speaker-img mb-3 img-fluid">
+                        <h4 class="mb-2">Thâmara Pereira</h4>
+                        <p class="small">
+                            Advogada, administradora e assistente social, apresentadora de dois podcasts sobre
+                            diversidade e inclusão.
+                        </p>
                     </div>
                 </div>
             </div>
-
-            <div class="col-6 col-md-4">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
-                    </div>
-                    <div class="col-auto">
-                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-4">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
-                    </div>
-                    <div class="col-auto">
-                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-4">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
-                    </div>
-                    <div class="col-auto">
-                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-4">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
-                    </div>
-                    <div class="col-auto">
-                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-4">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <img src="/img/pride-img-participante.png" alt="entrevistador" class="speaker-img">
-                    </div>
-                    <div class="col-auto">
-                        <span class="d-block mt-2 border rounded px-3 py-1">Nome do entrevistador</span>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
+
+    <!-- Seção 4 - Chamada de Inscrição -->
+    <div class="p-5 inscricao-color" id="inscricao">
+        <div class="row align-items-center">
+            <div class="col-md-6 mb-4">
+                <h1 class="fw-bold">NÃO PERCA!</h1>
+                <h3>Inscreva-se agora no nosso formulário</h3>
+                <p>Garanta sua participação no evento e não deixe de compartilhar com amigos e familiares!</p>
+                <button class="btn btn-primary mt-3">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf7nzVlwRCetLrfeBPNiCH1f14C4aCfl4bTmTVGYYeSwx1YdA/viewform?usp=preview"
+                        class="text-white text-decoration-none">Formulário do evento</a>
+                </button>
+            </div>
+            <div class="col-md-6 text-center">
+                <img src="/img/secao-4-compartilhe.png" alt="chamada de evento" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
