correção na nav #inscricao

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link text-white" href="#convidados">Convidados</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#participe">Participe</a>
+                        <a class="nav-link text-white" href="#inscricao">Participe</a>
                     </li>
                 </ul>
             </div>
@@ -103,7 +103,7 @@
         <!-- Call to action -->
         <div class="text-center d-flex flex-column flex-md-row align-items-center justify-content-between gap-5">
             <img src="/img/pride-sobre.png" alt="comemorando o orgulho" class="img-fluid" style="max-width:250px;">
-            <button><a href="">INSCREVA-SE AQUI!</a></button>
+            <button><a href="#inscricao">PARTICIPE !</a></button>
             <img src="/img/lesbicas-sobre.png" alt="casal e criança" class="img-fluid" style="max-width:250px;">
         </div>
     </div>
