adição de bold no título do PARTICIPANTES

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- Seção 3: Participantes -->
     <div class="p-5 parti-color" id="convidados">
-        <h1 class="text-center mb-4">Participantes</h1>
+        <h1 class="text-center mb-4 fw-bold">Participantes</h1>
 
         <div class="container">
             <div class="row g-4 justify-content-center text-center">
