--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <div class="row">
             <div class="col-md-5 mb-4">
                 <h1 class="fw-bold">SOBRE A WEBNAR:</h1>
-                <h3>25/10/2025 • VIA METT</h3>
+                <h3>25/10/2025 às 14:00 às 17:00 • VIA METT</h3>
+                <h4>O evento vale 4 horas complementares e enviamos o link do evento no email</h4>
                 <h4>Um espaço de reflexão e troca sobre temas atuais e necessários:</h4>
             </div>
             <div class="col-md-7">
