correção de informações na seção de participantes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             class="speaker-img mb-3 img-fluid">
                         <h4 class="mb-2">Akashi Hashimoto</h4>
                         <p class="small">
-                            Psicólogo clínico e pesquisador (CRP: 20/13.588), com atuação em temas LGBTQIAPN+.
+                            Psicólogo clínico e pesquisador, com atuação em temas LGBTQIAPN+.
                         </p>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             class="speaker-img mb-3 img-fluid">
                         <h4 class="mb-2">Thâmara Pereira</h4>
                         <p class="small">
-                            Advogada, administradora e assistente social, apresentadora de dois podcasts sobre
+                            Advogada, administradora, assistente social e apresentadora de dois podcasts sobre
                             diversidade e inclusão.
                         </p>
                     </div>
