correção sobre o horário

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webinar Psicologia</title>
+    <title>Webnar Psicologia</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="col-md-5 mb-4">
                 <h1 class="fw-bold">SOBRE A WEBNAR:</h1>
-                <h3>25/10/2025 às 14:00 às 17:00 • VIA METT</h3>
+                <h3>25/10/2025 das 14:00 às 17:00 • VIA MEET</h3>
                 <h4>O evento vale 4 horas complementares e enviamos o link do evento no email</h4>
                 <h4>Um espaço de reflexão e troca sobre temas atuais e necessários:</h4>
             </div>
